# fleet_adapter_lionsbot

./: CHANGELOG.md  README.md  leoscrub_Dockerfile  package.xml  r3_Dockerfile  setup.py
.github/workflows/: release.yml
fleet_adapter_leoscrub/: package.xml  setup.cfg  setup.py
fleet_adapter_leoscrub/configs/: config.yaml  dock_summary.yaml  nav_graph.yaml
fleet_adapter_leoscrub/fleet_adapter_leoscrub/: RobotClientAPI.py  RobotCommandHandle.py  fleet_adapter.py
fleet_adapter_leoscrub/fleet_adapter_leoscrub/enums/: enums.py
fleet_adapter_leoscrub/fleet_adapter_leoscrub/models/: DockProcessContent.py  EqualizerConfig.py  NavigateContent.py
fleet_adapter_leoscrub/fleet_adapter_leoscrub/test/: test_MapTransform.py
fleet_adapter_leoscrub/fleet_adapter_leoscrub/utils/: Coordinate.py
fleet_adapter_lionsbot/: RobotClientAPI.py  RobotCommandHandle.py  config.yaml  fleet_adapter.py  setup.cfg
fleet_adapter_lionsbot/fleet_adapter_lionsbot/: RobotClientAPI.py  fleet_adapter.py
fleet_adapter_lionsbot/fleet_adapter_lionsbot/models/: CleanProcessContent.py  NavigateContent.py  StopProcessContent.py  Waypoint.py  Zone.py  __init__.py
fleet_adapter_lionsbot/models/: DockProcessContent.py
fleet_adapter_r3/: package.xml  setup.cfg  setup.py
fleet_adapter_r3/configs/: config.yaml  dock_summary.yaml  nav_graph.yaml
fleet_adapter_r3/custom_tasks/: continue_task.py  pause_task.py
fleet_adapter_r3/fleet_adapter_r3/: RobotClientAPI.py  RobotCommandHandle.py  fleet_adapter.py
fleet_adapter_r3/fleet_adapter_r3/enums/: enums.py
(+8 files in other folders)
